--- a/.github/workflows/deploy_request_syspro_attendance_job.yml
+++ b/.github/workflows/deploy_request_syspro_attendance_job.yml
@@ -15,7 +15,7 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    step:
+    steps:
       - use: actions/checkout@v3
       - uses: docker/setup
       - id: 'auth'
