--- a/.github/workflows/deploy_request_syspro_attendance_job.yml
+++ b/.github/workflows/deploy_request_syspro_attendance_job.yml
@@ -16,7 +16,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - use: actions/checkout@v3
+      - uses: actions/checkout@v3
       - uses: docker/setup
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
