--- a/.github/workflows/deploy_request_syspro_attendance_job.yml
+++ b/.github/workflows/deploy_request_syspro_attendance_job.yml
@@ -4,6 +4,8 @@ on:
     # branches:
     #   - master
 
+permissions: write-all
+
 env:
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GCP_REGION: ${{ secrets.GCP_REGION }}
@@ -21,8 +23,8 @@ jobs:
         name: 'Authenticate to Google Cloud'
         uses: 'google-github-actions/auth@v0.4.0'
         with:
-          workload_identity_provider: ${{ secrets.GCP_WORKLOAD_IDENTIFY_PROVIDER }}
-          service_account: ${{ secrets.GCP_SERVICE_ACCOUNT_MAIL_ADDRESS }}
+          workload_identity_provider: $GCP_WORKLOAD_IDENTIFY_PROVIDER
+          service_account: $GCP_SERVICE_ACCOUNT_MAIL_ADDRESS
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v0'
