--- a/.github/workflows/deploy_request_syspro_attendance_job.yml
+++ b/.github/workflows/deploy_request_syspro_attendance_job.yml
@@ -9,10 +9,9 @@ permissions: write-all
 env:
   GCP_PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   GCP_REGION: ${{ secrets.GCP_REGION }}
-  GCP_WORKLOAD_IDENTIFY_PROVIDER: ${{ secrets.GCP_WORKLOAD_IDENTIFY_PROVIDER }}
-  GCP_SERVICE_ACCOUNT_MAIL_ADDRESS: ${{ secrets.GCP_SERVICE_ACCOUNT_MAIL_ADDRESS }}
   SERVICE_NAME: ${{ secrets.SERVICE_NAME }}
-  IMAGE: gcr.io/${{ secrets.GCP_PROJECT_ID }}/test-image:${{ github.sha }}
+  IMAGE: gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.SERVICE_NAME }}:${{ github.sha }}
+  PORT: 80
 
 jobs:
   deploy:
@@ -43,6 +42,7 @@ jobs:
         run: |
           gcloud run deploy $SERVICE_NAME \
             --image $IMAGE \
+            --port $PORT \
             --project $GCP_PROJECT_ID \
             --region $GCP_REGION \
             --quiet
