--- a/.github/workflows/deploy_request_syspro_attendance.yml
+++ b/.github/workflows/deploy_request_syspro_attendance.yml
@@ -1,8 +1,8 @@
 name: Deploy `Request SysPro Attendance`
 on:
   push:
-    # branches:
-    #   - master
+    branches:
+      - master
 
 permissions: write-all
 
