--- a/.github/workflows/build_request_syspro_attendance.yml
+++ b/.github/workflows/build_request_syspro_attendance.yml
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: 'Build'
-        run: docker build -f request_syspro_attendance.Dockerfile -t $IMAGE .
+        run: docker build -f request_syspro_attendance.Dockerfile .
