--- a/.github/workflows/build_request_attendance_server.yml
+++ b/.github/workflows/build_request_attendance_server.yml
@@ -1,4 +1,4 @@
-name: Build `Request SysPro Attendance`
+name: Build `Request Attendance Server`
 on:
   pull_request:
 
@@ -9,4 +9,4 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: 'Build'
-        run: docker build -f request_syspro_attendance.Dockerfile .
+        run: docker build -f request_attendance_server.Dockerfile .
