--- a/.github/workflows/deploy_request_attendance_server.yml
+++ b/.github/workflows/deploy_request_attendance_server.yml
@@ -1,4 +1,4 @@
-name: Deploy `Request SysPro Attendance`
+name: Deploy `Request Attendance Server`
 on:
   push:
     branches:
@@ -33,7 +33,7 @@ jobs:
         run: gcloud auth configure-docker --quiet
 
       - name: 'Build'
-        run: docker build -f request_syspro_attendance.Dockerfile -t $IMAGE .
+        run: docker build -f request_attendance_server.Dockerfile -t $IMAGE .
 
       - name: 'Push the docker image'
         run: docker push $IMAGE
